--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -42,9 +42,11 @@
                 height: 250px;
                 width:100%;
             }
-
             .text-justify {
                 text-align: justify;
+            }
+            .text-center{
+                text-align: center;
             }
             h2 {
                 text-align: center;
@@ -68,7 +70,7 @@
                     <div class="page-header">
                         <h2>EICOM</h2>
                     </div>
-                    <p class="text-justify">
+                    <p class="text-center">
                         Somos una empresa joven, pero con experiencia de ventas de
                         equipo de computo,venta de accesorios, instalación de redes,
                         consumibles, mantenimiento preventivo, mantenimiento correctivos y más…
@@ -78,7 +80,7 @@
                     <div class="page-header">
                         <h2>MISIÓN</h2>
                     </div>
-                    <p class="text-justify">
+                    <p class="text-center">
                         Ser una empresa dedicada a la prestación de servicios
                         en lo que a equipo de cómputo se refiere, además de la venta
                         de equipos y accesorios nuevos, bajo los requerimientos acordados
@@ -90,7 +92,7 @@
                     <div class="page-header">
                         <h2>VISIÓN</h2>
                     </div>
-                    <p class="text-justify">
+                    <p class="text-center">
                         Convertirnos en una empresa capaz de satisfacer las exigencias y gustos
                         del mercado informático y tecnológico, por medio del cual lleguemos a posicionarnos
                         entre una de las mejores empresas proveedoras de servicios y venta de equipo de cómputo.
@@ -148,6 +150,7 @@
                     </p>
                 </div>
             </div>
+            <br>
         </div>
     </div>
 </body>
