--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -51,7 +51,7 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 hidden-xs">
                     <div class=" texto-footer-justify padding-location">
                         <p><i class="fa fa-users" aria-hidden="true"></i><a title="Nosotros" href="{% url 'start:about' %}"> Nosotros</a></p>
                         <hr class="hr-footer">
@@ -60,16 +60,16 @@
                         <p><i class="fa fa-id-card-o" aria-hidden="true"></i><a href="{% url 'start:contact' %}"> Contacto</a></p>
                         <hr class="hr-footer">
                         <p><i class="fa fa-certificate" aria-hidden="true"></i><a href="#"> Políticas de garantía</a></p>
-                        <!--<hr class="hr-footer">-->
+                        <hr class="hr-footer">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class=" texto-footer padding-location">
-                        <a title="EICOM" href="http://eicom.pythonanywhere.com/"><img class="img-responsive center-block img-footer" src="{% static 'img/logofinaleicom.png' %}" alt="" /></a>						<br>
+                        <!--<a title="EICOM" href="http://eicom.pythonanywhere.com/"><img class="img-responsive center-block img-footer" src="{% static 'img/logofinaleicom.png' %}" alt="" /></a>--><br>
                         <span class="bottom-legend" style="color: #7a7b7b;">
                             EICOM © 2017
                             <br>
-                            Desarrollado por <b><a title="NavaSoft & Jogimbo" target="_blank" href="/">PowerPython</a></b>.
+                            Desarrollado por <b><a title="NavaSoft & Yojimbo" target="_blank" href="/">PowerPython</a></b>.
                         </span>
                     </div>
                 </div>
@@ -106,4 +106,3 @@
         </ul>
     </div>
 </footer>
-
