--- a/src/templates/barra_top.html
+++ b/src/templates/barra_top.html
@@ -1,79 +1,65 @@
 <style>
     {%block style%}
-.dark-bar
-{
-	padding: 10px 0px;
-	background-color: #1d1d1d;
-}
+        .dark-bar {
+            padding: 10px 0px;
+            background-color: #1d1d1d;
+        }
+        .menu-top li a, .menu-top li {
+            display: inline-block;
+            color: #fff;
+            margin-bottom: 0px;
+        }
+        .menu-top li {
+            padding: 0px 5px;
+        }
+        .menu-top {
+            margin:0px;n-bottom: 0px;
+        }
 
-.menu-top li a, .menu-top li
-{
-	display: inline-block;
-	color: #fff;
-	margin-bottom: 0px;
-}
+        .fb:hover {
+            color: #3b5998;
+        }
+        .tw:hover {
+            color: #00aced;
+        }
+        .youtube:hover {
+            color: #bb0000;
+        }
+        .google:hover {
+            color: #dd4b39;
+        }
+        .texto:hover {
+            color: #92d14f;
 
-.menu-top li
-{
-	padding: 0px 5px;
-}
-
-.menu-top
-{
-	margin-bottom: 0px;
-}
-
-        .fb:hover
-{
-	color: #3b5998;
-}
-
-.tw:hover
-{
-	color: #00aced;
-}
-
-.youtube:hover
-{
-	color: #bb0000;
-}
-
-.google:hover
-{
-	color: #dd4b39;
-}
-
- .texto:hover
-{
-	color: #92d14f;
-}
-a:link {
-    text-decoration:none;
-
-}
-
+        }
+        a:link {
+            text-decoration:none;
+        }
+        .padding-right {
+           padding-right: 0.3em;
+        }
     {% endblock style %}
 </style>
 <header>
     <div class="dark-bar">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-lg-3 text-center">
+                <div class="col-md-4 col-lg-4 text-center">
                     <ul class="menu-top">
                         <li>
-                            <a class="texto" title="Nosotros" href="{% url 'start:about' %}">Nosotros</a>
+                            <i class="fa fa-users padding-right" aria-hidden="true"></i><a class="texto" title="Nosotros" href="{% url 'start:about' %}">Nosotros</a>
                         </li>
                         <li>|</li>
                         <li>
-                            <a class="texto" title="Contacto" href="{% url 'start:contact' %}">Contacto</a>
+                            <i class="fa fa-id-card-o padding-right" aria-hidden="true"></i><a class="texto" title="Contacto" href="{% url 'start:contact' %}">Contacto</a>
                         </li>
                         <li>|</li>
                         <li>
-                            <a class="texto" title="Blog" href="#">Blog</a>
+                            <i class="fa fa-certificate padding-right" aria-hidden="true"></i><a class="texto" title="Blog" href="">Blog</a>
                         </li>
                     </ul>
                 </div><!-- col -->
-                <div class="col-md-5 col-lg-6 text-center">
+                <div class="col-md-4 col-lg-4 text-center">
                     <ul class="menu-top">
                         <li>
                             <i class="fa fa-phone"></i>
@@ -85,7 +71,7 @@ a:link {
                         </li>
                     </ul>
                 </div><!-- col -->
-                <div class="col-md-3 col-lg-3 text-center hidden-xs">
+                <div class="col-md-4 col-lg-4 text-center hidden-xs">
                     <ul class="menu-top">
                         <li>
                             <a title="Facebook" class="fb" target="_blank" href="https://www.facebook.com/EICOM"><i class="fa fa-facebook"></i></a>
