--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="{% static 'css/social-icon.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
     <script src="https://use.fontawesome.com/e5ab5ecece.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false&callback=iniciar">
-</script>
+    <script src="http://maps.google.com/maps/api/js?sensor=false&callback=iniciar"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>
     <title>eicom</title>
 </head>
 <body>
 {% include 'barra_top.html' %}
-
 {% include 'green_bar.html'%}
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -48,10 +49,18 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.10";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
     {% block content %}
 
     {% endblock %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
