--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -2,118 +2,112 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+    <style>
+        {%block style%}
+            @import url(https://fonts.googleapis.com/css?family=Josefin+Slab);
 
-<style>
-    {%block style%}
+            *, *:before, *:after {
+                box-sizing: inherit;
+            }
+            /** {margin:0;padding:0;border:0 none; position: relative;}*/
+            html {
+                background-image: linear-gradient(to bottom, #e6eff0 80%, #eee);
+                min-height: 100%;
+                background-size: cover;
+                box-sizing: border-box;
+                font-family: Josefin Slab, sans serif;
+            }
+            body {
+                height: inherit;
+            }
+            article {
+                height: 100vh;
+                -margin-bottom: 5vh;
+                display: flex;
+                align-items: center;
+                background-size: cover;
+                background-position: center;
+            }
+            h1 {
+                background: rgba(0,0,0,.4);
+                color: #fff;
+                font-size: 4vw;
+                font-weight: 100;
+                text-align: center;
+                width: 100%;
+                line-height: 1.3;
+            }
 
-        @import url(https://fonts.googleapis.com/css?family=Josefin+Slab);
-
-        *, *:before, *:after {
-            box-sizing: inherit;
-        }
-        /** {margin:0;padding:0;border:0 none; position: relative;}*/
-        html {
-            background-image: linear-gradient(to bottom, #e6eff0 80%, #eee);
-            min-height: 100%;
-            background-size: cover;
-            box-sizing: border-box;
-            font-family: Josefin Slab, sans serif;
-        }
-        body {
-            height: inherit;
-        }
-        article {
-            height: 100vh;
-            -margin-bottom: 5vh;
-            display: flex;
-            align-items: center;
-            background-size: cover;
-            background-position: center;
-        }
-        h1 {
-            background: rgba(0,0,0,.4);
-            color: #fff;
-            font-size: 4vw;
-            font-weight: 100;
-            text-align: center;
-            width: 100%;
-            line-height: 1.3;
-        }
-
-        .dos {
-            background-image: url("../static/img/contactanos.jpg");
-            height: 250px;
-            width:100%;
-        }
-        .text-about-center {
-            text-align: center;
-        }
-        .map-responsive{
-            overflow:hidden;
-            padding-bottom:56.25%;
-            position:relative;
-        }
-        .map-responsive iframe{
-            left:0;
-            top:0;
-            height:100%;
-            width:100%;
-            position:absolute;
-        }
-        .emerald-flat-button {
-            position: relative;
-            vertical-align: top;
-            width: 100%;
-            height: 50px;
-            padding: 0;
-            font-size: 22px;
-            color: white;
-            text-align: center;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-            background: #92d14f;
-            border: 0;
-            border-bottom: 2px solid #568624;
-            cursor: pointer;
-            -webkit-box-shadow: inset 0 -2px #568624;
-            box-shadow: inset 0 -2px #568624;
-        }
-        .emerald-flat-button:active {
-            top: 1px;
-            outline: none;
-            -webkit-box-shadow: none;
-            box-shadow: none;
-        }
-
-    {%endblock%}
-</style>
+            .dos {
+                background-image: url("../static/img/contactanos.jpg");
+                height: 250px;
+                width:100%;
+            }
+            .text-about-center {
+                text-align: center;
+            }
+            .map-responsive{
+                overflow:hidden;
+                padding-bottom:56.25%;
+                position:relative;
+            }
+            .map-responsive iframe{
+                left:0;
+                top:0;
+                height:100%;
+                width:100%;
+                position:absolute;
+            }
+            .map-size {
+                padding-top:4cm;
+            }
+            .padding-map {
+                padding-top: 0.75cm;
+            }
+            .emerald-flat-button {
+                position: relative;
+                vertical-align: top;
+                width: 100%;
+                height: 50px;
+                padding: 0;
+                font-size: 22px;
+                color: white;
+                text-align: center;
+                text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+                background: #92d14f;
+                border: 0;
+                border-bottom: 2px solid #568624;
+                cursor: pointer;
+                -webkit-box-shadow: inset 0 -2px #568624;
+                box-shadow: inset 0 -2px #568624;
+            }
+            .emerald-flat-button:active {
+                top: 1px;
+                outline: none;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+            }
+        {%endblock%}
+    </style>
 <body>
-    <article class='dos'>
-      <h1>¡CONTÁCTANOS!</h1>
-    </article>
-    <br>
+    <!--<article class='dos'>-->
+      <!--<h1>¡CONTÁCTANOS!</h1>-->
+    <!--</article>-->
     <div class="container">
         <div class="row">
-            <div class="col md-12">
-                <div class="col-md-6 text-about-center">
-                    <div class="page-header">
-                        <h3><i class="fa fa-address-book-o" aria-hidden="true"></i> INFORMACIÓN DE CONTACTO: </h3>
-                    </div>
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    <h3>CONTÁCTANOS:</h3>
                     <br>
-                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>  Dirección: Avenida Benjamín Flores y Calle 30 (local verde)</p>
-                    <p><i class="fa fa-envelope-o" aria-hidden="true"></i> E-mail: eicom_sanluis@hotmail.com</p>
-                    <p><i class="fa fa-phone" aria-hidden="true"></i> Teléfonos: 518 1519 | 653 1067262</p>
-                    <p><i class="fa fa-globe" aria-hidden="true"></i> Página web: eicom.pythonanywhere.com</p> <br><br>
-
-                    <div class="thumbnail col-md-12 ">
-                        <div class=" map-responsive"><br>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d65.15354643070178!2d-114.75904852364107!3d32.43520450174623!2m2!1f7.372176066730731!2f6.63216152943555!3m2!1i1024!2i768!4f55.8249039809447!3m3!1m2!1s0x80d64f04ec3760e1%3A0x438f59653e1b32d9!2sAltar%2C+San+Luis+R%C3%ADo+Colorado%2C+Son.!5e1!3m2!1ses!2smx!4v1498751679052" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3365.7003761346245!2d-114.77695568517018!3d32.48070498106247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d64e27b0ecccef%3A0xcbd52d6149fe693e!2sPizzas+%26+Beer!5e0!3m2!1ses-419!2smx!4v1495137863172" width="580" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
-                    </div>
                 </div>
-
-                <div class="col-md-5 col-md-offset-1" ><br>
-                    <form method = 'POST' action="">{% csrf_token %}
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <form method = 'POST' action="">{% csrf_token %}
+                    <div class="col-md-5">
                         <div class="clearfix form-group">
                             <label>Nombre:</label>
                             <div class="input-group">
@@ -121,6 +115,8 @@
                                 {{contact_form.nombre|as_crispy_field:"bootstrap"}}
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-4">
                         <div class="clearfix form-group">
                             <label>Email:</label>
                             <div class="input-group">
@@ -128,6 +124,8 @@
                                 {{contact_form.email|as_crispy_field}}
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-3">
                         <div class="clearfix form-group">
                             <label>Teléfono:</label>
                             <div class="input-group">
@@ -135,13 +133,8 @@
                                 {{contact_form.telefono|as_crispy_field}}
                             </div>
                         </div>
-                        <div class="clearfix form-group">
-                            <label>Asunto:</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
-                                {{contact_form.asunto|as_crispy_field}}
-                            </div>
-                        </div>
+                    </div>
+                    <div class="col-md-12">
                         <div class="clearfix form-group">
                             <label>Mensaje:</label>
                             <div class="input-group">
@@ -150,10 +143,16 @@
                             </div>
                             <br>
                             <button class="btn emerald-flat-button" type="submit" ><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Enviar comentario</button><br><br><br>
-                        </div><br>
-                    </form>
-                </div>
+                        </div>
+                    </div>
+                </form>
             </div>
+            <div class="col-md-4 text-about-center padding-map">
+                <div class="thumbnail col-md-12">
+                    <div class=" map-responsive map-size">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3365.7003761346245!2d-114.77695568517018!3d32.48070498106247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d64e27b0ecccef%3A0xcbd52d6149fe693e!2sPizzas+%26+Beer!5e0!3m2!1ses-419!2smx!4v1495137863172" width="580" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
