--- a/src/templates/green_bar.html
+++ b/src/templates/green_bar.html
@@ -10,15 +10,28 @@
             background: #4CAF50;
             color: white;
             padding: 0px;
+            padding-bottom: 0.1cm;
         }
         .navbar-brand>img {
-            padding-left: 2em;
+            /*padding-left: 2em;*/
             background: white;
-            height: 100%;
+            height: 125%;
             width: auto;
         }
         .padding-linea {
             padding-top: 12.5px;
+        }
+        .padding-separador{
+            padding-left: 0.5em;
+            padding-right: 0.5em;
+        }
+        .dropdown-submenu {
+            position: relative;
+        }
+        .dropdown-submenu .dropdown-menu {
+            top: 0;
+            left: 100%;
+            margin-top: -1px;
         }
 
     {% endblock style %}
@@ -28,7 +41,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="navbar navbar-default" role="navigation">
-				<div class="container-fluid">
+				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
 							<span class="sr-only">Toggle navigation</span>
@@ -36,46 +49,79 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a title="EICOM" class="navbar-brand" href="/"><img class="img-responsive center-block logo-brand" src="{% static 'img/logofinaleicom.png' %}" alt="" /></a>							</div><!-- navbar-header -->
+						<a title="EICOM" class="navbar-brand" href="/"><img class="img-responsive logo-brand" src="{% static 'img/logofinaleicom.png' %}" alt="" /></a>							</div><!-- navbar-header -->
 					<div class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li>
-								<a title="INICIO" href="/"><i class="fa fa-home"></i></a>
-                            </li>
-							<li class="padding-linea hidden-xs">
-								|
-							</li>
-							<li>
-								<a title="PROMOCIONES" href="#">PROMOCIONES</a>
-							</li>
-							<li class="padding-linea hidden-xs">
-								|
-							</li>
-							<li class="dropdown li-activo">
-								<a  title="CATEGORÍAS" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-									CATEGORÍAS <span class="caret"></span>
-								</a>
-								<ul class="dropdown-menu" role="menu">
-									{% categorias_lista as categorias %}
-									{% if categorias %}
-									{% for obj in categorias %}
-										<li><a href="{% url 'start:filtro' filtro=obj.categoria %}"/>{{ obj }}</a></li>
-									{% endfor %}
-									{% else %}
-										<li><a href="#">Empty</a></li>
-									{% endif %}
-								</ul>
-							</li>
-							<li>
-								<a title="LO MÁS VENDIDO" href="#">LO MÁS VENDIDO</a>
-							</li>
-							<li class="padding-linea hidden-xs">
-								|
-							</li>
-							<li>
-								<a title="LO MÁS NUEVO" href="#">LO MÁS NUEVO</a>
-							</li>
-						</ul>
+                        <strong>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>
+                                    <a title="INICIO" href="/"><i class="fa fa-home"></i> INICIO</a>
+                                </li>
+                                <li class="padding-linea hidden-xs padding-separador">
+                                    <!--|-->
+                                </li>
+                                <li class="dropdown li-activo">
+                                    <a  title="DEPARTAMENTOS" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                                    CATEGORÍAS <span class="caret"></span>
+                                    </a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        {% categorias_lista as categoria %}
+                                        {% departamento_lista as departamento %}
+                                        {% if departamento %}
+                                            {% for obj in departamento %}
+                                                <li class="dropdown-submenu">
+                                                    <a class="test" tabindex="-1" href="#">{{ obj }} <span class="caret"></span></a>
+                                                    <ul class="dropdown-menu">
+                                                        {% for cate in categoria %}
+                                                            {% if obj == cate.departamento %}
+                                                                <li><a tabindex="-1" href="{% url 'start:filtro' filtro=cate.categoria %}">{{ cate }}</a></li>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </ul>
+                                                </li>
+                                            {% endfor %}
+                                        {% else %}
+                                            <li><a href="#">Empty</a></li>
+                                        {% endif %}
+                                    </ul>
+                                </li>
+                                <script>
+                                    $(document).ready(function(){
+                                        $('.dropdown-submenu').mouseenter(function(){
+                                        $(this).children('ul').show();
+                                    });
+                                    $('.dropdown-submenu').mouseleave(function(){
+                                        $(this).children('ul').hide();
+                                        })
+                                    });
+                                </script>
+                                <li class="padding-linea hidden-xs padding-separador">
+                                    <!--|-->
+                                </li>
+                                <li>
+                                    <a title="PROMOCIONES" href="{% url 'start:filtro' filtro='Promociones' %}">PROMOCIONES</a>
+                                </li>
+                                <li class="padding-linea hidden-xs padding-separador">
+                                    <!--|-->
+                                </li>
+                                {% if request.user.is_authenticated %}
+                                    <li>
+                                        <a href="{% url 'auth_logout' %}"><span class="glyphicon glyphicon-log-out"></span> SALIR</a>
+                                    </li>
+                                {% else %}
+                                    <li>
+                                        <a title="REGISTER" href="{% url 'registration_register' %}"><span class="glyphicon glyphicon-user"></span> REGISTRARSE</a>
+                                    </li>
+                                    <li class="padding-linea hidden-xs padding-separador">
+                                        <!--|-->
+                                    </li>
+                                {% endif %}
+                                {% if not request.user.is_authenticated %}
+                                    <li>
+                                        <a title="SESION" href="{% url 'auth_login' %}"><span class="glyphicon glyphicon-log-in"></span> INICIAR SESIÓN</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </strong>
 					</div><!-- nav-collapse -->
 				</div><!--container -->
 			</div><!-- navbar -->
