--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,6 @@
         .texto-mas-vendido{
             padding-top: 0.3cm;
             color: orangered;
-
         }
         .zoom{
             transition: 200ms ease;
@@ -54,43 +53,48 @@
     {%endblock%}
 </style>
 <body class="body-index">
-    <div class="col-md-12 body-index" >
-        <div class="container-fluid">
-           {% include 'searchbox.html' %}
-        </div>
-        {% include 'slideshow.html' %}
-        {% include 'menu_horizontal.html' %}
-        <div class="container">
-            <div class=" col-md-12">
-                <h2 class="texto-mas-vendido">LO MÁS VENDIDO</h2>
-                <hr>
-                <br>
-                {% for obj in object_list %}
-                    <div class="col-md-3 text-align-index zoom"><br><br>
-                        {% if obj.imagen %}
-                            <img src="{{ obj.imagen.url }}" class="img-responsive  " alt=""/>
-                        {% endif %}
-                        <div class="page-header">
-                            <h4><a href="{{ obj.get_absolute_url }}">{{ obj.nombre }}</a></h4>
-                        </div>
-                        <h6><a href="{{ obj.get_absolute_url }}">{{ obj.modelo }}</a></h6>
-                        <br>
-                        <p><h2>$ {{ obj.precio }}</h2></p>
-                        <div class="footer buttons-index"><br>
-                            <p><a href="{{ obj.get_absolute_url }}" class="btn emerald-flat-button" role="button">Detalles</a></p>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+    {% include 'social_media.html'%}
+    {% include 'searchbox.html' %}
+    {% include 'slideshow.html' %}
+    <div class="container">
+        <div class="row">
+            <h3 class="texto-mas-vendido">LO MÁS VENDIDO</h3>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <hr>
+            <br>
+            <!--inicio for object_list-->
+            {% for obj in object_list %}
+                <div class="col-md-3 text-align-index zoom"><br><br>
+                    {% if obj.imagen %}
+                        <img src="{{ obj.imagen.url }}" class="img-responsive  " alt=""/>
+                    {% endif %}
+                    <div class="page-header">
+                        <h4><a href="{{ obj.get_absolute_url }}">{{ obj.nombre }}</a></h4>
+                    </div>
+                    <h6><a href="{{ obj.get_absolute_url }}">{{ obj.modelo }}</a></h6>
+                    <br>
+                    <p><h2>$ {{ obj.precio }}</h2></p>
+                    <div class="footer buttons-index"><br>
+                        <p><a href="{{ obj.get_absolute_url }}" class="btn emerald-flat-button" role="button">Detalles</a></p>
+                    </div>
+                </div>
+            <!--end for object_list-->
+            {% endfor %}
+        </div>
+    </div>
+    <!--Paginación-->
     {% include 'pagination.html' %}
     <div class="col-md-12">
-                <hr>
+        <hr>
     </div>
+    <!--Marcas-->
     {%include 'marcas.html'%}
+    <!--Footer-->
     {% include 'footer.html' %}
-</body>
+</body><!--end body-->
 {% endblock %}
 
 
