--- a/src/templates/searchbox.html
+++ b/src/templates/searchbox.html
@@ -3,9 +3,9 @@
     {% block style %}
         .div-searchbox {
         /*background: #4CAF50;*/
-        height: 100px;
+        height: 65px;
         /*text-align: center;*/
-        padding-top: 23px;
+        /*padding-top: 23px;*/
     }
     .form-search{
         margin: 0 auto;
@@ -22,7 +22,8 @@
         border-top-left-radius: 2px;
         background-color:  #ffffff;
         box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
-        padding: 14px 15px 14px 40px;
+         padding: 14px 15px 14px 40px;
+        /*padding: 14px 15px 14px 40px;*/
         border: 1px solid #b6c3cd;;
         border-right: 0;
         color:#4E565C;
