--- a/src/templates/social_media.html
+++ b/src/templates/social_media.html
@@ -27,10 +27,10 @@
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 class="modal-title">Visítanos en facebook</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="text-align:center;">
                 <div class="fb-page"
-                    data-href="https://www.facebook.com/imdb"
-                    data-width="340"
+                    data-href="https://www.facebook.com/eicom"
+                    data-width="500"
                     data-hide-cover="false"
                     data-show-facepile="true">
                 </div>
