Top Vendidos y Promo

--- a/src/templates/green_bar.html
+++ b/src/templates/green_bar.html
@@ -98,7 +98,7 @@
                                     <!--|-->
                                 </li>
                                 <li>
-                                    <a title="PROMOCIONES" href="{% url 'start:filtro' filtro='Promociones' %}">PROMOCIONES</a>
+                                    <a title="PROMOCIONES" href="{% url 'start:promo' %}">PROMOCIONES</a>
                                 </li>
                                 <li class="padding-linea hidden-xs padding-separador">
                                     <!--|-->
