--- a/src/templates/equipo_detail.html
+++ b/src/templates/equipo_detail.html
@@ -18,6 +18,15 @@
     </style>
     <body>
         <div class="container">
+          {% if user.is_authenticated %}
+            <a href="{% url 'start:editar' slug=instance.slug %}"><span class="glyphicon glyphicon-pencil"></span>Editar</a>
+            <a class="confirm-delete" href="{% url 'start:borrar' slug=instance.slug %}"><span class="glyphicon glyphicon-remove"></span>Borrar</a>
+            <script type="text/javascript">
+              $(document).on('click', '.confirm-delete', function(){
+                return confirm('Desea borrar el registro {{ instance.clave }}?');
+              });
+            </script>
+          {% endif %}
             <div class="col-md-12">
                 <div class="col-md-6 padding-detail">
                     {% if instance.imagen %}
@@ -28,27 +37,16 @@
                     <div class="page-header">
                         <h2 class="align-detail">ESPECIFICACIONES:</h2>
                     </div>
+                    <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Clave:</strong> {{ instance.clave }}
+                    <hr>
                     <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Modelo:</strong> {{ instance.modelo }}
                     <hr>
                     <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Marca:</strong> {{ instance.marca }}
                     <hr>
-                    <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Procesador:</strong> {{ instance.procesador }}
-                    <!--<hr>-->
-                    <!--<p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Disco duro:</strong> {{ instance.disco_duro }}-->
-                    <hr>
-                    <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Pantalla:</strong> {{ instance.pantalla }}
-                    <hr>
-                    <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Memoria Ram:</strong> {{ instance.memoria_ram }}
-                    <!--<hr>-->
-                    <!--<p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Batería:</strong> {{ instance.bateria }}-->
-                    <!--<hr>-->
-                    <!--<p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Cámara:</strong> {{ instance.camara }}-->
-                    <!--<hr>-->
-                    <!--<p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Tarjeta de video:</strong> {{ instance.video }}-->
-                    <!--<hr>-->
-                    <!--<p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Adaptador A.C.:</strong> {{ instance.adaptador_ac }}-->
-                    <!--<hr><p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Precio:</strong> {{ instance.precio }}-->
-                    <!--<hr>-->
+                    {% if user.is_authenticated %}
+                      <p><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Precio:</strong> {{ instance.precio }}
+                      <hr>
+                    {% endif %}
                 </div>
                 <div class="col-md-12">
                     <div class="page-header">
