--- a/src/templates/equipo_form.html
+++ b/src/templates/equipo_form.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Post Form</h1>
-    <form method="POST" action="" enctype="multipart/form-data">{% csrf_token %}
+    <h1>Formato Producto</h1>
+    <form method="POST" enctype="multipart/form-data">{% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Crear post"/>
+        <input type="submit" value="Guardar Producto"/>
     </form>
 {% endblock content %}
