--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -77,7 +77,9 @@
                     </div>
                     <h6><a href="{{ obj.get_absolute_url }}">{{ obj.modelo }}</a></h6>
                     <br>
-                    <p><h2>$ {{ obj.precio }}</h2></p>
+                    {% if user.is_authenticated %}
+                      <p><h2>$ {{ obj.precio }}</h2></p>
+                    {% endif %}
                     <div class="footer buttons-index"><br>
                         <p><a href="{{ obj.get_absolute_url }}" class="btn emerald-flat-button" role="button">Detalles</a></p>
                     </div>
