--- a/src/templates/barra_top.html
+++ b/src/templates/barra_top.html
@@ -53,21 +53,21 @@
                         <li>
                             <i class="fa fa-id-card-o padding-right" aria-hidden="true"></i><a class="texto" title="Contacto" href="{% url 'start:contact' %}">Contacto</a>
                         </li>
-                        <li>|</li>
-                        <li>
-                            <i class="fa fa-certificate padding-right" aria-hidden="true"></i><a class="texto" title="Blog" href="">Blog</a>
-                        </li>
+                        <!--<li>|</li>-->
+                        <!--<li>-->
+                            <!--<i class="fa fa-certificate padding-right" aria-hidden="true"></i><a class="texto" title="Blog" href="">Blog</a>-->
+                        <!--</li>-->
                     </ul>
                 </div><!-- col -->
                 <div class="col-md-4 col-lg-4 text-center">
                     <ul class="menu-top">
                         <li>
                             <i class="fa fa-phone"></i>
-                            51 81519
+                            (653) 518 15 19
                         </li>
                         <li>|</li>
                         <li>
-                            653 106 72 62
+                            (653) 106 72 62
                         </li>
                     </ul>
                 </div><!-- col -->
