--- a/src/templates/equipo_form.html
+++ b/src/templates/equipo_form.html
@@ -1,8 +1,118 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-    <h1>Formato Producto</h1>
-    <form method="POST" enctype="multipart/form-data">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Guardar Producto"/>
-    </form>
+<style>
+    {%block style%}
+        div.titulo-nuevo {
+            text-align: center;
+            color: orangered;
+            padding-bottom: 30px;
+        }
+        div.texto-nuevo {
+            /*color: ;*/
+        }
+        div.padding-divNuevo {
+            padding-bottom: 10px;
+        }
+        div.padding-buttonNuevo {
+            padding: 30px;
+        }
+        div.cuadro-nuevo {
+            border: 1px solid #d8d8d8;
+        }
+    {%endblock style%}
+</style>
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 texto-nuevo cuadro-nuevo">
+                <div class="page-header titulo-nuevo">
+                    <h3>NUEVO EQUIPO</h3>
+                </div>
+                <form method="POST" action="" enctype="multipart/form-data">{% csrf_token %}
+                    <div class="col-md-12">
+                        <div class="col-md-2">
+                            <label>Clave: </label>
+                            {{ form.clave|as_crispy_field }}
+                        </div>
+                        <div class="col-md-4">
+                            <label>Nombre: </label>
+                            {{ form.nombre|as_crispy_field }}
+                        </div>
+                        <div class="col-md-3">
+                            <label>Marca: </label>
+                            {{ form.marca|as_crispy_field }}
+                        </div>
+                        <div class="col-md-3">
+                            <label>Modelo: </label>
+                            {{ form.modelo|as_crispy_field }}
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-4">
+                            <label>Familia: </label>
+                            {{ form.familia|as_crispy_field }}
+                        </div>
+                        <div class="col-md-4">
+                            <label>Categoría: </label>
+                            {{ form.categoria|as_crispy_field }}
+                        </div>
+                        <div class="col-md-2">
+                            <label>Líneas </label>
+                            {{ form.linea|as_crispy_field }}
+                        </div>
+                        <div class="col-md-2">
+                            <label>Precio: </label>
+                            {{ form.precio|as_crispy_field }}
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                         <div class="col-md-3 col-md-offset-3">
+                             <label>Producto más vendido: </label>
+                            {{ form.top_vendido|as_crispy_field }}
+                        </div>
+                        <div class="col-md-3">
+                            <label>Producto en promoción: </label>
+                            {{ form.promo|as_crispy_field }}
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <label>Descripción: </label>
+                            {{ form.descripcion|as_crispy_field }}
+                            <br><br>
+                        </div>
+                    </div>
+                    <div class="col-md-12 padding-divNuevo">
+
+                        <div class="col-md-6">
+                            <label>Imagen principal: </label>
+                            {{ form.imagen|as_crispy_field }}
+                        </div>
+                        <div class="col-md-6">
+                            <label>Imagen secundaria 1:</label>
+                            {{ form.imagen_1|as_crispy_field }}
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-6">
+                            <label>Imagen secundaria 2:</label>
+                            {{ form.imagen_2|as_crispy_field }}
+                        </div>
+                        <div class="col-md-6">
+                            <label>Imagen secundaria 3:</label>
+                            {{ form.imagen_3|as_crispy_field }}
+                        </div>
+                    </div>
+                    <div class="col-md-12 padding-buttonNuevo">
+                        <div class="col-md-3 pull-left">
+                            <a href="/" class="btn btn-danger btn-block" role="button">Cancelar</a>
+                        </div>
+                        <div class="col-md-3 pull-right">
+                            <input class="btn btn-success btn-block" type="submit" value="Guardar producto"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
