--- a/src/templates/equipo_detail.html
+++ b/src/templates/equipo_detail.html
@@ -38,7 +38,7 @@
                 <div class="contenedor-footer-detalles">
                     <div class="descripcion-detalles">
                         <span class="texto-descripcion">Descripción:</span>
-                        <p>{{ instance.descripcion}}</p>
+                        <p>{{ instance.descripcion | safe}}</p>
                     </div>
                     <div class="galeria-detalles">
                         <span class="texto-galeria">Galería:</span>
@@ -49,7 +49,7 @@
                                 </a>
                             </div>
                         {% endif %}
-                        {% if instance.image_1 and isntace.image_2 and instance.image_3 %}
+                        {% if instance.imagen_1 and instance.imagen_2 and instance.imagen_3 %}
                             <div class="contenedor-imagen zoom-galeria" >
                                 <a href="{{ instance.imagen_1.url }}" data-lightbox="galeria">
                                     <img src="{{ instance.imagen_1.url }}" class="img-responsive " alt="imagen 2"/>
